--- a/style.css
+++ b/style.css
@@ -86,10 +86,10 @@
 }
 
 
-@keyframes fadeInRight {
+@keyframes fadeInLeft {
     from {
         opacity: 0;
-        transform: translateX(30px);
+        transform: translateX(-30px);
     }
     to {
         opacity: 1;
@@ -98,19 +98,17 @@
 }
 
 .fade-in-subtitle, .fade-in-credit {
-    animation: fadeInRight 1.2s ease-out both;
+    animation: fadeInLeft 1.2s ease-out both;
 }
 
 .fade-in-subtitle {
     font-size: 20px;
     color: #888;
     margin-top: -10px;
-    text-align: center;
 }
 
 .fade-in-credit {
     font-size: 14px;
     color: #aaa;
     margin-top: 5px;
-    text-align: center;
 }
