--- a/style.css
+++ b/style.css
@@ -89,11 +89,11 @@
 @keyframes fadeInLeft {
     from {
         opacity: 0;
-        transform: translateX(-30px);
+        transform: translateY(-30px);
     }
     to {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 
@@ -105,10 +105,12 @@
     font-size: 20px;
     color: #888;
     margin-top: -10px;
+    text-align: center;
 }
 
 .fade-in-credit {
     font-size: 14px;
     color: #aaa;
     margin-top: 5px;
+    text-align: center;
 }
